# drug-discovery

./: .gitattributes  .gitignore  README.md  TODO.md  add_active_features.py  data.py  environment.yml  pyproject.toml  tox21chem.bash  train.py
architecture1/: README.md
config/: rse.ini
data/: tox21_parsed.pkl
docs/: attention.md  test1.md
eda/: tox21.ipynb
modules/: __init__.py
modules/attention/: base.py  topological.py
modules/preprocessing/: data.py  dataloader.py  gatpre.py  preprocess.py  utils.py
notes/: clusteralgo.md  wavefunctions.md
notes/papers/: autochemresearch.md  hierarchicalmoleculargraph.md
projects/nn-drug/: requirements.txt
region-size-experiments/: control.py  moltransformer.py  train.py
regionsizeexperiments/: README.md  moltransformer.py  moltvariants.py
scripts/: tox21.bash
scripts/data/: add_active_features.py
